fix: added css override to prevent ugly scrollbar background on some browsers

--- a/src/styles.css
+++ b/src/styles.css
@@ -12,8 +12,8 @@
 .eloquent-chat__intro {
   margin-top: 20px;
   display: flex;
-    flex-direction: column;
-    align-items: center;
+  flex-direction: column;
+  align-items: center;
 }
 .eloquent-chat__intro.fade-out {
   animation: shrinkPanelHeight 0.5s forwards;
@@ -36,12 +36,12 @@
   padding: 6px;
 }
 .eloquent-chat__bubble-close {
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
-    font-size: 50px;
-    flex-direction: column;
-    height: 36px;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  font-size: 50px;
+  flex-direction: column;
+  height: 36px;
 }
 .eloquent-chat__bubble-logo {
   background-size: contain;
@@ -74,13 +74,13 @@
 }
 
 .eloquent-chat__panel.panel-closed:not(.block-animation) {
-  animation: 
+  animation:
     shrinkPanelWidth 0.6s cubic-bezier(0.29, 1, 0.32, 0.94) forwards,
     shrinkPanelHeight 0.6s cubic-bezier(0.17, 0.9, 0.26, 0.97) forwards;
 }
 
 .eloquent-chat__panel.panel-open:not(.block-animation) {
-  animation: 
+  animation:
     growPanelWidth 0.5s cubic-bezier(0.29, 1, 0.32, 0.94) forwards,
     growPanelHeight 0.6s cubic-bezier(0.17, 0.9, 0.26, 0.97) forwards;
 }
@@ -126,6 +126,7 @@
   justify-content: center;
   padding: 12px;
   overflow: auto;
+  overflow-x: hidden;
   flex: 1;
   min-height: 200px;
 }
@@ -149,13 +150,13 @@
   white-space: nowrap;
   position: relative;
   margin-left: 40px;
-  animation: 
+  animation:
     fadeInMessage 0.4s ease-out forwards,
     typewriter 2.5s steps(60, end) 0.4s forwards;
 }
 
 .eloquent-chat__msg.assistant::before {
-  content: '';
+  content: "";
   position: absolute;
   left: -8px;
   top: 75%;
@@ -168,7 +169,7 @@
 }
 
 .eloquent-chat__messages :nth-last-child(2)::after {
-  content: '';
+  content: "";
   position: absolute;
   left: -43px;
   bottom: -15px;
@@ -214,7 +215,7 @@
 }
 
 .eloquent-chat__msg.user::after {
-  content: '';
+  content: "";
   position: absolute;
   right: -4px;
   top: 68%;
@@ -235,7 +236,7 @@
 }
 
 .eloquent-chat__msg.error::before {
-  content: '';
+  content: "";
   position: absolute;
   left: -8px;
   top: 75%;
@@ -303,7 +304,9 @@
   box-shadow: 0 0 0 2px rgba(0, 123, 255, 0.5);
 }
 button.eloquent-chat__bubble:focus,
-button.eloquent-chat__bubble:focus-visible { outline: none; }
+button.eloquent-chat__bubble:focus-visible {
+  outline: none;
+}
 .eloquent-chat__input button:disabled:focus {
   box-shadow: none;
 }
@@ -365,4 +368,27 @@ button.eloquent-chat__bubble:focus-visible { outline: none; }
   to {
     width: 0;
   }
+}
+
+/* Override scrollbar styling to prevent dark theme browsers to look weird */
+
+::-webkit-scrollbar-track {
+  background: #fff;
+  border-radius: 6px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #c1c1c1;
+  border-radius: 6px;
+  border: 2px solid #fff;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #a8a8a8;
+}
+
+/* Firefox scrollbar styling */
+html {
+  scrollbar-width: thin;
+  scrollbar-color: #c1c1c1 #fff;
 }
